--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IDE
+.idea
+*.iml
+*.ipr
+*.iws
 
 # Package Files #
+*.class
 *.jar
 *.war
 *.nar
@@ -19,6 +14,19 @@
 *.tar.gz
 *.rar
 
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Gradle
+.gradle
+.gradletasknamecache
+build/
+bin/
+
+# Files
+*.log
+*.ctxt
+bin/**
+gen/**
