--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,25 @@ plugins {
     id 'java'
 }
 
+
 group 'ai.incredible'
 version '1.0-SNAPSHOT'
 
+
 repositories {
     mavenCentral()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+
+test {
+    // Enable JUnit 5 (Gradle 4.6+). 이것만 넣으면 실제로 Junit이 실행된다
+    useJUnitPlatform()
+
+    // Always run tests, even when nothing changed.
+    dependsOn 'cleanTest'
 }
