--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'java-anderson'
 include 'java-01-unittest'
 include 'java-02-grpc'
 include 'java-03-solr'
+include 'code-01-simple'
 
