--- a/java-03-solr/build.gradle
+++ b/java-03-solr/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'ai.incredible'
+group 'ai.incredible.solr'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,9 +10,18 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.1'
+    implementation group: 'org.apache.solr', name: 'solr-solrj', version: '8.11.2'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.3'
+
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
+
 
 test {
     useJUnitPlatform()
