--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,6 @@ include 'java-04-spark'
 include 'java-05-protobuf'
 include 'java-06-gson'
 include 'java-06-gson'
+include 'java-10-lightgbm'
+include 'java-11-google-cache'
 
