--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,12 @@
 rootProject.name = 'java-anderson'
+include 'code-01-simple'
 include 'java-01-unittest'
 include 'java-02-grpc'
 include 'java-03-solr'
-include 'code-01-simple'
 include 'java-04-spark'
 include 'java-05-protobuf'
 include 'java-06-gson'
-include 'java-06-gson'
 include 'java-10-lightgbm'
-include 'java-11-google-cache'
+include 'java-11-caffeine'
+include 'java-12-cassandra'
 
