--- a/java-12-cassandra/build.gradle
+++ b/java-12-cassandra/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'scala'
 }
 
 group = 'ai.incredible.cassandra'
@@ -13,10 +14,11 @@ dependencies {
     implementation "com.github.jnr:jnr-posix:3.1.15"
     implementation 'joda-time:joda-time:2.12.7'
 
-    implementation 'org.apache.spark:spark-core_2.12:3.4.0'
-    implementation 'org.apache.spark:spark-sql_2.12:3.4.0'
-    implementation 'com.datastax.spark:spark-cassandra-connector_2.12:3.4.0'
-    implementation 'com.datastax.oss:java-driver-core:4.13.0'
+    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
+    implementation 'org.apache.spark:spark-core_2.12:3.4.1'
+    implementation 'org.apache.spark:spark-sql_2.12:3.4.1'
+    implementation 'com.datastax.spark:spark-cassandra-connector_2.12:3.4.1'
+//    implementation 'com.datastax.oss:java-driver-core:4.17.0'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
